# afterworlds

./: .secrets.baseline  AGENTS.md  Agents.md  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
context/: architecture_invariants.md  pr_examples.md
docs/architecture/: construction_readiness.md  design.md  known_unknowns.md  spine_demo.md
docs/decisions/: ADR-0001-pricing-model-shift-from-freemium-to-metered-hosted-plus-byok.md  ADR-0002-core-model-schema-decisions.md
docs/prompts/: branching_mode.md  rpg_mode.md  writing_mode.md
src/afterworlds/: __init__.py
src/afterworlds/models/: __init__.py  character_sheet.py  enums.py  node.py  session.py  state.py  story.py  turn.py
tests/: test_placeholder.py
tests/models/: factories.py  test_character_sheet.py  test_node.py  test_session.py  test_state.py  test_story.py  test_turn.py
